--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ repositories {
 }
 
 dependencies {  
-    testCompile 'junit:junit:4.11'        
+  compile 'org.stokesdrift:moka:0.1.1-SNAPSHOT'        
+  compile 'org.freemarker:freemarker:2.3.25-incubating'
+  testCompile 'junit:junit:4.11'        
 }
 
 jar {
