--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
   compile 'org.stokesdrift:moka:0.1.1-SNAPSHOT'        
   compile 'org.freemarker:freemarker:2.3.25-incubating'
   compile 'com.google.code.gson:gson:2.8.0'
+  compile 'io.airlift:airline:0.7'
   
   testCompile 'junit:junit:4.11'        
 }
