--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,11 @@ buildscript {
     mavenLocal()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     mavenCentral()
+    maven { url "https://plugins.gradle.org/m2/" }
   }
-  
+  dependencies {
+   classpath "us.kirchmeier:gradle-capsule-plugin:1.0.2"
+  }
 }
 
 apply plugin: 'java'
@@ -13,7 +16,23 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'groovy'
 apply plugin: 'application'
+apply plugin: "us.kirchmeier.capsule"
 
+mainClassName = "org.stokesdrift.shores.Shore"
+
+task fatCapsule(type: FatCapsule) {
+  applicationClass mainClassName
+  baseName 'shores'
+  from jar
+  from { configurations.runtime } 
+  
+  capsuleManifest {
+    systemProperties['java.awt.headless'] = true
+    // systemProperties['log4j.configuration'] = 'log4j.xml'
+    // args = ['--very-fancy']
+    minJavaVersion = '1.8.0'
+  }
+}
 
 configurations {
   compile {
@@ -67,7 +86,7 @@ task sourcesJar(type: Jar) {
 }
 
 artifacts {
-  archives javadocJar, sourcesJar
+  archives javadocJar, sourcesJar, fatCapsule
 }
 
 test {
